--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-fetch": "^2.6.1",
     "pug": "3.0.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "webflow-cms": "1.1.2"
   }
 }
